Được tạo bằng Colaboratory

--- a/CHUONG1.ipynb
+++ b/CHUONG1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzkLHlpa5JVxiTOUZX0LBz",
+      "authorship_tag": "ABX9TyMkFvFvphmTPtTbrRho4v30",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,583 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#1.2.1 Các phép xử lý với danh sách\n",
+        "danhsach1 = [1., 3.]\n",
+        "danhsach2 = [5., 7.]\n",
+        "danhsach = danhsach1 + danhsach2"
+      ],
       "metadata": {
         "id": "v_4pzPOoCTME"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "danhsach_gapdoi = 2*danhsach\n",
+        "danhsach_gapdoi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8oja_pzoCt9S",
+        "outputId": "ba08bb5e-4018-4a03-87d4-9868e42c10b7"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.0, 3.0, 5.0, 7.0, 1.0, 3.0, 5.0, 7.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "danhsach*2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E3RLfS1MCziE",
+        "outputId": "b4df087f-8590-4f71-c671-a5ba10b268a0"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.0, 3.0, 5.0, 7.0, 1.0, 3.0, 5.0, 7.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "danhsach/2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "id": "4cmgixtHCz47",
+        "outputId": "35b35957-d2ca-438b-df87-42fa08e07e9d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-1a8cd7e4a434>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdanhsach\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'list' and 'int'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mon_hoc = ['ToanCC', 'DSTT', 'ToanRR', 'LaptrinhCB']\n",
+        "thu_tu = [2,3,4,1]\n",
+        "diem_so = [10,9,8,7]\n",
+        "anh_xa = zip(thu_tu, mon_hoc, diem_so)\n",
+        "anh_xa"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_7jsp8ZkDCeI",
+        "outputId": "8048be3a-df83-4514-ee9b-1ad20583d77a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<zip at 0x7f251ac462d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tap_hop = set(anh_xa)\n",
+        "tap_hop"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R2-nuuQNDDR2",
+        "outputId": "a0f0032a-a614-44fc-92f4-a0ee054b8196"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{(1, 'LaptrinhCB', 7), (2, 'ToanCC', 10), (3, 'DSTT', 9), (4, 'ToanRR', 8)}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lay_TT, lay_monhoc, lay_diem = zip(*anh_xa)\n",
+        "lay_monhoc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 181
+        },
+        "id": "0ubf6unWDDNO",
+        "outputId": "376758cb-3acc-4353-fb1e-dfe0fa526bea"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-9010897b8a23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlay_TT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlay_monhoc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlay_diem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0manh_xa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlay_monhoc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 0)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import itertools\n",
+        "tap_sinh = list(itertools.chain(range(4), range(5,10), range(15,20)))\n",
+        "tap_sinh"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "23LnK7plDDGO",
+        "outputId": "59a96c39-f2f3-47de-c25b-d0c58f078bec"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 5, 6, 7, 8, 9, 15, 16, 17, 18, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(zip(range(4), range(7,12), reversed(range(11))))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RA1jQ89eEJfQ",
+        "outputId": "088a6e64-5b3b-493f-995a-c9339b7b42f6"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(0, 7, 10), (1, 8, 9), (2, 9, 8), (3, 10, 7)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2.1 Dinh nghia Symbol va cac phep toan hinh thuc (symbolic)"
+      ],
+      "metadata": {
+        "id": "aZsXfapmEJbt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol\n",
+        "x = Symbol('x')\n",
+        "f = x+x+x+2\n",
+        "f"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "IRmZhx5TEJVL",
+        "outputId": "f84fb27c-b08d-4934-e29d-54c44f5abda2"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3*x + 2"
+            ],
+            "text/latex": "$\\displaystyle 3 x + 2$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = Symbol('Noi')\n",
+        "b = Symbol('Chim')\n",
+        "3*b + 7*a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "RK0Qy2YrEJMH",
+        "outputId": "dd3ed0e5-2e55-4372-bf90-c7395634fd4f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3*Chim + 7*Noi"
+            ],
+            "text/latex": "$\\displaystyle 3 Chim + 7 Noi$"
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = Symbol('Noi')\n",
+        "b = Symbol('Chim')\n",
+        "a.name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "uh2uvOvMFXPn",
+        "outputId": "45e0e66d-3038-482f-9166-e23670599669"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Noi'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b.name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "sv89RXjRFXLc",
+        "outputId": "787aecda-00fd-416d-f1e2-4d2d003cfff2"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chim'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "z = Symbol('z')"
+      ],
+      "metadata": {
+        "id": "4tvKHrG_FXHU"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import symbols \n",
+        "a,b,c = symbols('a,b,c')"
+      ],
+      "metadata": {
+        "id": "C_wuvl7QFXDU"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol\n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "s = x*y + y*x\n",
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "tCb7fUmNFW_d",
+        "outputId": "1e863cd0-9b08-4f1c-cd12-bc8e8b10811d"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2*x*y"
+            ],
+            "text/latex": "$\\displaystyle 2 x y$"
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = x*(x+2*x)\n",
+        "p"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "y6UkUqx3FW66",
+        "outputId": "90076210-24ad-459b-acc7-bf69e3501a4f"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3*x**2"
+            ],
+            "text/latex": "$\\displaystyle 3 x^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = (x+2)*(y+3)\n",
+        "p\n",
+        "(x + 2)*(y + 3)\n",
+        "p = (x+2)*(y+3) + (x+2)*(x-3)\n",
+        "p"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "68T_vOtyGvIX",
+        "outputId": "3e26aabb-f915-4479-fe7e-9baf20097355"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(x - 3)*(x + 2) + (x + 2)*(y + 3)"
+            ],
+            "text/latex": "$\\displaystyle \\left(x - 3\\right) \\left(x + 2\\right) + \\left(x + 2\\right) \\left(y + 3\\right)$"
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = x*(-x+2*x-x)\n",
+        "p"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "g--VaLcsGvCp",
+        "outputId": "496065cf-9b22-4318-958c-f8f3cf463c59"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ],
+            "text/latex": "$\\displaystyle 0$"
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = (x+2)*(y+3)\n",
+        "p.expand()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "7rtX-pOHGu9p",
+        "outputId": "f6b86ef3-bd0d-47c4-d485-6256b798d82b"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x*y + 3*x + 2*y + 6"
+            ],
+            "text/latex": "$\\displaystyle x y + 3 x + 2 y + 6$"
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2.2.1 Dat nhan tu chung va khai trien bieu thuc"
+      ],
+      "metadata": {
+        "id": "g22IJs6OGu4t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rZcv132zGux_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fRMFia6pGutQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gqr0ZR8AGuiq"
       },
       "execution_count": null,
       "outputs": []
