Được tạo bằng Colaboratory

--- a/CHUONG1.ipynb
+++ b/CHUONG1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkFvFvphmTPtTbrRho4v30",
+      "authorship_tag": "ABX9TyOR2bSr51gyCvqoVYY9NSVD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,27 +597,609 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sympy import factor\n",
+        "bieuthuc = x**3 - y**3\n",
+        "factor(bieuthuc)"
+      ],
       "metadata": {
-        "id": "rZcv132zGux_"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "rZcv132zGux_",
+        "outputId": "d2e0344c-1ca2-4be6-c7ac-80dca7275533"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(x - y)*(x**2 + x*y + y**2)"
+            ],
+            "text/latex": "$\\displaystyle \\left(x - y\\right) \\left(x^{2} + x y + y^{2}\\right)$"
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        " from sympy import expand\n",
+        "bieuthuc = (x - y)*(x**2 + x*y + y**2)\n",
+        "expand(bieuthuc)"
+      ],
       "metadata": {
-        "id": "fRMFia6pGutQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "fRMFia6pGutQ",
+        "outputId": "e5f622fd-4a70-4244-cdb4-38e53e776f39"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**3 - y**3"
+            ],
+            "text/latex": "$\\displaystyle x^{3} - y^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#2.2.3 Thay the gia tri"
+      ],
       "metadata": {
         "id": "gqr0ZR8AGuiq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol\n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "bieuthuc = x*x - x*y + y*y\n",
+        "bieuthuc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "OjIiXYGAIP4n",
+        "outputId": "3ccb466f-957b-41fb-c3fa-fec4ac32778b"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**2 - x*y + y**2"
+            ],
+            "text/latex": "$\\displaystyle x^{2} - x y + y^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "giatri = bieuthuc.subs({x:3, y:2})\n",
+        "giatri"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "mAQMurPKIPyi",
+        "outputId": "d96080ab-0c5e-4ca3-f07a-e0d457d55339"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ],
+            "text/latex": "$\\displaystyle 7$"
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Thuc hanh:\n",
+        "#Tinh huong 1\n",
+        "giatri = bieuthuc.subs({x:3, y:x})\n",
+        "giatri"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "BYaW4X-AIPri",
+        "outputId": "a9b3ddb1-3aa5-4b5c-e50a-ca1f93f4aa92"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**2 - 3*x + 9"
+            ],
+            "text/latex": "$\\displaystyle x^{2} - 3 x + 9$"
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tinh huong 2\n",
+        "giatri = bieuthuc.subs({x:y, y:3})\n",
+        "giatri"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "s5VcVnleIPnb",
+        "outputId": "e9743868-6680-437e-f0cf-198bd238fa85"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ],
+            "text/latex": "$\\displaystyle 9$"
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tinh huong 3\n",
+        "giatri = bieuthuc.subs({y:x}).subs({x:3})\n",
+        "giatri"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "zlkD60msIPY-",
+        "outputId": "76e01610-a079-4eb5-f767-a115def84416"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ],
+            "text/latex": "$\\displaystyle 9$"
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol\n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "bieuthuc = x*x - x*y + y*y\n",
+        "bieuthuc\n",
+        "bieuthuc_moi=bieuthuc.subs({x:1-y})\n",
+        "bieuthuc_moi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "4J4KnjB0IPPC",
+        "outputId": "158c7057-847c-4c69-f054-23eba3302a28"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "y**2 - y*(1 - y) + (1 - y)**2"
+            ],
+            "text/latex": "$\\displaystyle y^{2} - y \\left(1 - y\\right) + \\left(1 - y\\right)^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import simplify\n",
+        "dongian = simplify(bieuthuc_moi)\n",
+        "dongian"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "68Jm9hENI7wJ",
+        "outputId": "237cc6a8-2567-41d4-f563-9cc0f338810b"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3*y**2 - 3*y + 1"
+            ],
+            "text/latex": "$\\displaystyle 3 y^{2} - 3 y + 1$"
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol\n",
+        "from sympy import sin, cos \n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "bt = sin(x)*cos(y) + cos(x)*sin(y)\n",
+        "bt_moi = simplify(bt)\n",
+        "bt_moi"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "XLsUVYzpI7d2",
+        "outputId": "eafc5082-0e00-44bf-9feb-83aae9d20e5a"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "sin(x + y)"
+            ],
+            "text/latex": "$\\displaystyle \\sin{\\left(x + y \\right)}$"
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3.1 Mot so lenh co ban numpy xu ly vecto\n",
+        "import numpy as np\n",
+        "from numpy import *"
+      ],
+      "metadata": {
+        "id": "HUBOGlLiI7Xk"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec1 = np.array([1., 3., 5.])\n",
+        "vec1 * 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OvzUkc-5I7RY",
+        "outputId": "5573e68d-5cd7-45d8-ceab-10039527110b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2.,  6., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec1 * vec1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zdjxyzBcI7K9",
+        "outputId": "23521d11-4daf-4a41-efec-f52f763d43e7"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.,  9., 25.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec1 /2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ydAiOZckI7Ez",
+        "outputId": "45418e8d-5d7e-4a9e-fa88-ba00433cce74"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.5, 1.5, 2.5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec1 + vec1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LoW0J6JUKQi9",
+        "outputId": "8077ae28-10ab-4c64-fa10-e1599cbacffa"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2.,  6., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec2 = array([2., 4.]) \n",
+        "vec1 + vec2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 181
+        },
+        "id": "VyRceyYBKTsO",
+        "outputId": "76125b10-e075-479c-ea3a-b4a72e6b6d9a"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-53-196b68c3b1e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvec2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4.\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvec1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mvec2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (2,) "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec3 = array([2., 4., 6.])\n",
+        "vec1 + vec3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "81j--E92KTjr",
+        "outputId": "c0f74a82-6624-4644-f7b8-1ca47b3af676"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 3.,  7., 11.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec1 / vec3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LZxZS3ZiKTeu",
+        "outputId": "4c4ad860-102b-49b0-a7ed-73ceb66afde4"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.5       , 0.75      , 0.83333333])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vec1 * vec3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N70PqL19KTaU",
+        "outputId": "78fb54b4-80bf-415a-9d4c-8ba240fd046a"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2., 12., 30.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2* vec1 + 5* vec3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2tcWiRwTKTVk",
+        "outputId": "79d0f33e-8f43-4140-deca-0b268b2f6b20"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12., 26., 40.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dN7i83QTKTQ_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mfXadll-KTMd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FqP8j3tWKTIS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Z3s1qbBIKTEo"
       },
       "execution_count": null,
       "outputs": []
