Được tạo bằng Colaboratory

--- a/Chương_2.ipynb
+++ b/Chương_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwV2wh3YQVK/KpXhs0iKg7",
+      "authorship_tag": "ABX9TyMCvZoF+qHuRrl/DxSmJxvw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1481,6 +1481,191 @@
           },
           "metadata": {},
           "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#cau2\n",
+        "#van_de_1\n",
+        "import sympy as sp\n",
+        "from sympy import Symbol, solve\n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "pt1 = x - y + 2\n",
+        "pt2 = 2*x + 3*y - 6\n",
+        "nghiem = sp.solve((pt1,pt2))\n",
+        "nghiem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cj0WoIfRXS3s",
+        "outputId": "2ef43341-d485-4d84-fd23-18ec474ac24d"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{x: 0, y: 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#van_de_2\n",
+        "import sympy as sp\n",
+        "from sympy import Symbol, solve\n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "z = Symbol('z')\n",
+        "pt1 = x - y - 2\n",
+        "pt2 = 2*x - y - z - 3\n",
+        "pt3 = x + y + z -6\n",
+        "nghiem = sp.solve((pt1,pt2,pt3))\n",
+        "nghiem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "An4KNNf6XUSf",
+        "outputId": "aa6e76a9-661a-4c09-acd2-38233ed6825c"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{x: 3, y: 1, z: 2}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#van_de_3\n",
+        "import sympy as sp\n",
+        "from sympy import Symbol, solve\n",
+        "a = Symbol('a')\n",
+        "b = Symbol('b')\n",
+        "c = Symbol('c')\n",
+        "pt1 = a + b + c - 4\n",
+        "pt2 = 4*a + 2*b + c - 3\n",
+        "pt3 = 9*a + 3*b + c -4\n",
+        "nghiem = sp.solve((pt1,pt2,pt3))\n",
+        "nghiem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pfkhbQOPXW3M",
+        "outputId": "dbfbac92-461e-4b09-8659-3a43b887c173"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{a: 1, b: -4, c: 7}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#van_de_4\n",
+        "import sympy as sp\n",
+        "from sympy import Symbol, solve\n",
+        "a = Symbol('a')\n",
+        "b = Symbol('b')\n",
+        "c = Symbol('c')\n",
+        "pt1 = a + c - 1\n",
+        "pt2 = a + b - 2*c + 3\n",
+        "pt3 = -2*a + 2*b + c \n",
+        "nghiem = sp.solve((pt1,pt2,pt3))\n",
+        "nghiem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5-3I0X3cXZJD",
+        "outputId": "ef28be9d-1723-4e8f-dfec-e78827f3e2a9"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{a: -1/9, b: -2/3, c: 10/9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#cau3\n",
+        "import numpy as np\n",
+        "A = np.array([[1,1], [1, 0]])\n",
+        "b = np.array([0,0])\n",
+        "n = 3"
+      ],
+      "metadata": {
+        "id": "Rax7wgusXbxv"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(n):\n",
+        "  b = A.dot(b)\n",
+        "  print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AbLFrJ35Xecm",
+        "outputId": "b611a441-493f-442c-cb8a-f93c04953a0e"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 0]\n",
+            "[0 0]\n",
+            "[0 0]\n"
+          ]
         }
       ]
     }
